testsuite/tests/typecheck/should_fail/T19915.hs
module T19915 where

import GHC.Exts

instance WithDict a b
