testsuite/tests/typecheck/should_fail/T19915.stderr

T19915.hs:5:10: error:
    • Class ‘WithDict’ does not support user-specified instances.
    • In the instance declaration for ‘WithDict a b’
